# gaia

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: lint.yml  publish.yml  tests.yml
docs/: api-reference.md  getting-started.md  index.md
docs/01-gaia-framework/: best-practices.md  overview.md  principles.md  workflows.md
docs/01-gaia-framework/phases/: 01-generate.md  02-analyze.md  03-implement.md  04-acceptance.md
docs/02-progress/: changelog.md  index.md  milestones.md  roadmap.md
docs/03-cases-templates/: index.md
docs/03-cases-templates/templates/: phase-startup-template.md  prd-template.md  retrospective-template.md  skill-definition-template.md  skill-evolution-template.json  tech-design-template.md
docs/04-appendix/: faq.md  glossary.md  references.md
examples/: demo.py
examples/projects/: todo-cli-demo.md
examples/workflows/: daily-retrospective.yaml  gaia-full-flow.yaml  project-init.yaml  skill-discovery.yaml
gaia_cli/: README.md  __init__.py  main.py  pyproject.toml
gaia_cli/commands/: __init__.py
gaia_core/: README.md  __init__.py  __init__.pyi  pyproject.toml
gaia_core/engine/: __init__.py
gaia_core/phases/: __init__.py
gaia_core/state/: __init__.py
gaia_integration/: README.md  __init__.py
gaia_integration/adapters/: __init__.py
gaia_integration/api/: __init__.py
gaia_integration/mcp/: __init__.py
gaia_knowledge/: README.md  __init__.py  __init__.pyi
gaia_knowledge/graph/: __init__.py
gaia_knowledge/patterns/: __init__.py
gaia_knowledge/search/: __init__.py
gaia_skills/: README.md  __init__.py  __init__.pyi  pyproject.toml
gaia_skills/evolution/: __init__.py  evolution.schema.json
gaia_skills/manager/: __init__.py
gaia_skills/registry/: __init__.py
gaia_skills/repository/: __init__.py
gaia_templates/: README.md  __init__.py  __init__.pyi
gaia_templates/engine/: __init__.py
gaia_web/: README.md  __init__.py
gaia_web/backend/: __init__.py
gaia_workflow/: README.md  __init__.py  __init__.pyi
gaia_workflow/dsl/: __init__.py
gaia_workflow/executor/: __init__.py
gaia_workflow/triggers/: __init__.py
scripts/: quickstart.py
tests/: conftest.py
tests/core/: test_state.py
tests/knowledge/: test_search.py
tests/skills/: test_manager.py
tests/workflow/: test_dsl.py
